Random number generation and new launcher icon

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:title="@string/app_name"
             app:popupTheme="@style/Widget.AppCompat.PopupMenu"/>
 
     </android.support.design.widget.AppBarLayout>
