--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">@dimen/editTextMinWidth</item>
         <item name="android:gravity">center</item>
+        <item name="android:selectAllOnFocus">true</item>
+        <item name="android:text">0</item>
         <item name="android:maxLength">2</item>
         <item name="android:digits">0123456789</item>
         <item name="android:inputType">number</item>
