--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="editTextMinWidth">48dp</dimen>
+    <dimen name="editTextMinSize">48dp</dimen>
     <dimen name="valueToUnitPadding">4dp</dimen>
     <dimen name="unitToNextPadding">32dp</dimen>
     <dimen name="activityPadding">16dp</dimen>
     <dimen name="sectionMargin">31dp</dimen>
+    <dimen name="editTextCornerRadius">8dp</dimen>
+    <dimen name="editTextStokeWidth">4dp</dimen>
+    <dimen name="alarm_bell_size">128dp</dimen>
 </resources>
