--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cvv.fanstaticapps.randomticker.AlarmActivity">
+    tools:context="com.cvv.fanstaticapps.randomticker.activities.AlarmActivity">
 
     <com.richpath.RichPathView
         android:id="@+id/alarm_bell_icon"
