--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#9c27b0</color>
     <color name="colorPrimaryDark">#7b1fa2</color>
     <color name="colorAccent">#00c853</color>
+    <color name="dismissColor">@color/colorAccent</color>
+    <color name="dismissingColor">#e64a19</color>
+    <color name="dismissedColor">#d50000</color>
 </resources>
