imeOptions for edittexts
onEditorAction implemented

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -86,6 +86,7 @@
 
                     <EditText
                         android:id="@+id/max_sec"
+                        android:imeOptions="actionDone"
                         style="@style/Interval.EditText"/>
 
                     <TextView
