--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,18 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.cvv.fanstaticapps.randomticker.activities.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Widget.Design.AppBarLayout">
-
-        <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/Widget.AppCompat.PopupMenu"
-            app:title="@string/app_name"/>
-
-    </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/app_bar"/>
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -36,65 +25,7 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/minimum_time"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
-
-                <LinearLayout
-                    style="@style/Interval.Container">
-
-                    <EditText
-                        android:id="@+id/min_min"
-                        style="@style/Interval.EditText"/>
-
-                    <TextView
-                        style="@style/Interval.Unit"
-                        android:labelFor="@+id/min_min"
-                        android:text="@string/abbrev_minute"/>
-
-                    <EditText
-                        android:id="@+id/min_sec"
-                        style="@style/Interval.EditText"
-                        tools:text="01"/>
-
-                    <TextView
-                        style="@style/Interval.Unit"
-                        android:labelFor="@+id/min_sec"
-                        android:text="@string/abbrev_second"/>
-
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/maximum_time"
-                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
-
-                <LinearLayout
-                    style="@style/Interval.Container">
-
-                    <EditText
-                        android:id="@+id/max_min"
-                        style="@style/Interval.EditText"/>
-
-                    <TextView
-                        style="@style/Interval.Unit"
-                        android:labelFor="@+id/max_min"
-                        android:text="@string/abbrev_minute"/>
-
-                    <EditText
-                        android:id="@+id/max_sec"
-                        android:imeOptions="actionDone"
-                        style="@style/Interval.EditText"/>
-
-                    <TextView
-                        style="@style/Interval.Unit"
-                        android:labelFor="@+id/max_sec"
-                        android:text="@string/abbrev_second"/>
-
-                </LinearLayout>
+                <include layout="@layout/content_range"/>
             </LinearLayout>
 
             <Button
