The timer! The timer is at fault, damn

--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="activityPadding">64dp</dimen>
     <dimen name="touch_height">64dp</dimen>
     <dimen name="range_container_min_width">480dp</dimen>
 </resources>
