--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,9 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:minWidth="@dimen/range_container_min_width"
             android:orientation="vertical"
             android:padding="@dimen/activityPadding">
@@ -87,6 +87,7 @@
                 style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/sectionMargin"
                 android:text="@string/start_button"/>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
