--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="titleMargin">8dp</dimen>
     <dimen name="touch_height">48dp</dimen>
     <dimen name="range_container_min_width">99999dp</dimen>
+    <dimen name="dismiss_button_min_size">80dp</dimen>
 </resources>
