--- a/app/src/main/res/layout/activity_klaxon.xml
+++ b/app/src/main/res/layout/activity_klaxon.xml
@@ -1,82 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.cvv.fanstaticapps.randomticker.activities.KlaxonActivity"
-    tools:layout_editor_absoluteX="0dp"
-    tools:layout_editor_absoluteY="25dp">
+    android:orientation="vertical"
+    android:padding="@dimen/activityPadding"
+    tools:context="com.cvv.fanstaticapps.randomticker.activities.KlaxonActivity">
 
     <com.richpath.RichPathView
         android:id="@+id/alarm_bell_icon"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_weight="2"
+        android:padding="@dimen/sectionMargin"
         android:gravity="center"
-        android:padding="64dp"
-        app:layout_constraintBottom_toTopOf="@+id/pulsator"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@+id/pulsator"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/pulsator"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        app:layout_constraintVertical_chainStyle="spread"
-
-        app:layout_constraintVertical_weight="2"
         app:vector="@drawable/ic_alarm_bell"/>
 
     <pl.bclogic.pulsator4droid.library.PulsatorLayout
         android:id="@+id/pulsator"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
+        android:layout_weight="1"
         android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/alarm_bell_icon"
-        app:layout_constraintVertical_chainStyle="spread"
-        app:layout_constraintVertical_weight="1"
         app:pulse_color="@color/dismissColor"
         app:pulse_count="4"
         app:pulse_duration="4000"
         app:pulse_interpolator="Linear"
         app:pulse_repeat="0"
         app:pulse_startFromScratch="true"
-        tools:layout_editor_absoluteX="16dp"/>
+        tools:layout_editor_absoluteX="16dp">
 
-    <ImageView
-        android:id="@+id/dismiss_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/ic_cancel_filler"
-        android:contentDescription="@android:string/cancel"
-        android:minHeight="80dp"
-        android:minWidth="80dp"
-        android:src="@drawable/ic_cancel"
-        android:tint="@color/dismissColor"
-        app:layout_constraintBottom_toBottomOf="@+id/pulsator"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="@+id/pulsator"
-        app:layout_constraintStart_toStartOf="@+id/pulsator"
-        app:layout_constraintTop_toTopOf="@+id/pulsator"/>
+        <ImageView
+            android:id="@+id/dismiss_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@drawable/ic_cancel_filler"
+            android:contentDescription="@android:string/cancel"
+            android:minHeight="@dimen/dismiss_button_min_size"
+            android:minWidth="@dimen/dismiss_button_min_size"
+            android:src="@drawable/ic_cancel"
+            android:tint="@color/dismissColor"/>
+    </pl.bclogic.pulsator4droid.library.PulsatorLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
