--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:layout_height="wrap_content">
 
-    <include layout="@layout/content_main"/>
-</android.support.v4.widget.NestedScrollView>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/activityPadding">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/minimum_time"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
+
+        <LinearLayout
+            style="@style/Interval.Container">
+
+            <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
+                android:id="@+id/min_min"
+                style="@style/Interval.NumberPicker"/>
+
+            <TextView
+                style="@style/Interval.Unit"
+                android:labelFor="@+id/min_min"
+                android:text="@string/abbrev_minute"/>
+
+            <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
+                android:id="@+id/min_sec"
+                style="@style/Interval.NumberPicker"
+                tools:text="01"/>
+
+            <TextView
+                style="@style/Interval.Unit"
+                android:labelFor="@+id/min_sec"
+                android:text="@string/abbrev_second"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/maximum_time"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
+
+        <LinearLayout
+            style="@style/Interval.Container">
+
+            <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
+                android:id="@+id/max_min"
+                style="@style/Interval.NumberPicker"/>
+
+            <TextView
+                style="@style/Interval.Unit"
+                android:labelFor="@+id/max_min"
+                android:text="@string/abbrev_minute"/>
+
+            <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
+                android:id="@+id/max_sec"
+                style="@style/Interval.NumberPicker"
+                android:imeOptions="actionDone"/>
+
+            <TextView
+                style="@style/Interval.Unit"
+                android:labelFor="@+id/max_sec"
+                android:text="@string/abbrev_second"/>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/start"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/sectionMargin"
+            android:text="@string/start_button"/>
+    </LinearLayout>
+</ScrollView>
