--- a/app/src/main/res/drawable/ic_alarm_bell.xml
+++ b/app/src/main/res/drawable/ic_alarm_bell.xml
@@ -10,12 +10,12 @@
         android:pivotY="6.25">
         <path
             android:name="top"
-            android:fillColor="#9c27b0"
+            android:fillColor="#fff"
             android:pathData="M22,19.8v-5c0-3.1-1.6-5.6-4.5-6.3V7.8c0-0.8-0.7-1.5-1.5-1.5s-1.5,0.7-1.5,1.5v0.7c-2.9,0.7-4.5,3.2-4.5,6.3v5l-2,2v1h16v-1L22,19.8z"/>
 
         <path
             android:name="bottom"
-            android:fillColor="#9c27b0"
+            android:fillColor="#fff"
             android:pathData="M16,25.8c1.1,0,2-0.9,2-2h-4C14,24.9,14.9,25.8,16,25.8z"/>
     </group>
 </vector>
