--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="numberPickerMinSize">128dp</dimen>
-    <dimen name="valueToUnitPadding">4dp</dimen>
-    <dimen name="unitToNextPadding">32dp</dimen>
     <dimen name="activityPadding">16dp</dimen>
     <dimen name="sectionMargin">36dp</dimen>
-    <dimen name="editTextCornerRadius">8dp</dimen>
-    <dimen name="editTextStokeWidth">4dp</dimen>
     <dimen name="titleMargin">8dp</dimen>
-    <dimen name="touch_height">48dp</dimen>
-    <dimen name="range_container_min_width">99999dp</dimen>
-    <dimen name="dismiss_button_min_size">80dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="widgetMargin">24dp</dimen>
+    <dimen name="touchHeight">48dp</dimen>
+    <dimen name="dismissButtonMinSize">80dp</dimen>
 </resources>
