--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -12,76 +11,13 @@
         android:orientation="vertical"
         android:padding="@dimen/activityPadding">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/minimum_time"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
+        <include layout="@layout/content_minimum_value"/>
 
-        <LinearLayout
-            style="@style/AppTheme.Interval.Container">
-
-            <TextView
-                android:id="@+id/min_value"
-                style="@style/AppTheme.Interval.TimeDisplay"
-                tools:text="10m10s"/>
-
-            <SeekBar
-                android:id="@+id/min_min"
-                style="@style/AppTheme.Interval.SeekBar"/>
-
-            <TextView
-                style="@style/AppTheme.Interval.Unit"
-                android:text="@string/minutes"/>
-
-            <SeekBar
-                android:id="@+id/min_sec"
-                style="@style/AppTheme.Interval.SeekBar"/>
-
-            <TextView
-                style="@style/AppTheme.Interval.Unit"
-                android:text="@string/seconds"/>
-
-        </LinearLayout>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/maximum_time"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
-
-        <LinearLayout
-            style="@style/AppTheme.Interval.Container">
-
-            <TextView
-                android:id="@+id/max_value"
-                style="@style/AppTheme.Interval.TimeDisplay"
-                tools:text="10m10s"/>
-
-            <SeekBar
-                android:id="@+id/max_min"
-                style="@style/AppTheme.Interval.SeekBar"/>
-
-            <TextView
-                style="@style/AppTheme.Interval.Unit"
-                android:text="@string/minutes"/>
-
-            <SeekBar
-                android:id="@+id/max_sec"
-                style="@style/AppTheme.Interval.SeekBar"/>
-
-            <TextView
-                style="@style/AppTheme.Interval.Unit"
-                android:text="@string/seconds"/>
-
-        </LinearLayout>
+        <include layout="@layout/content_maximum_value"/>
 
         <Button
             android:id="@+id/start"
             style="@style/AppTheme.Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/sectionMargin"
             android:text="@string/start_button"/>
     </LinearLayout>
 
