--- a/app/src/main/res/layout/activity_klaxon.xml
+++ b/app/src/main/res/layout/activity_klaxon.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#9c27b0"
+    android:background="@drawable/klaxon_background"
     android:padding="@dimen/activityPadding"
     tools:context="com.cvv.fanstaticapps.randomticker.activities.KlaxonActivity">
 
