--- a/app/src/main/res/layout/content_minimum_value.xml
+++ b/app/src/main/res/layout/content_minimum_value.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
-              tools:showIn="@layout/activity_main">
+              tools:showIn="@layout/content_main">
 
     <TextView
         style="@style/AppTheme.Interval.Description"
