--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="widgetMargin">24dp</dimen>
     <dimen name="touchHeight">48dp</dimen>
     <dimen name="dismissButtonMinSize">80dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
