--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name" translatable="false">Random Ticker</string>
     <string name="license" translatable="false">Open Source Licenses</string>
-    <string name="pref_ringtone">pref_ringtone</string>
+    <string name="pref_ringtone" translatable="false">pref_ringtone</string>
 </resources>
