--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#7b1fa2</color>
     <color name="colorAccent">#00c853</color>
     <color name="dismissColor">#d50000</color>
+    <color name="progressDefaultState">#eeeeee</color>
 </resources>
