Added new progressbar to styles

--- a/app/src/main/res/layout/content_minimum_value.xml
+++ b/app/src/main/res/layout/content_minimum_value.xml
@@ -16,7 +16,8 @@
 
     <SeekBar
         android:id="@+id/min_min"
-        style="@style/AppTheme.Interval.SeekBar" />
+        style="@style/AppTheme.Interval.SeekBar"
+        tools:progress="12" />
 
     <TextView
         style="@style/AppTheme.Interval.Unit"
