--- a/app/src/main/res/drawable/seekbar_progress.xml
+++ b/app/src/main/res/drawable/seekbar_progress.xml
@@ -2,13 +2,15 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="@color/progressDefaultState" />
+            <corners android:radius="@dimen/progressCornerRadius" />
+            <solid android:color="@color/progressBackgroundColor" />
         </shape>
     </item>
 
     <item android:id="@android:id/progress">
         <clip>
             <shape android:shape="rectangle">
+                <corners android:radius="@dimen/progressCornerRadius" />
                 <solid android:color="@color/colorAccent" />
             </shape>
         </clip>
