--- a/app/src/main/res/drawable/seekbar_thumb.xml
+++ b/app/src/main/res/drawable/seekbar_thumb.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <size
-        android:width="@dimen/thumb_height"
-        android:height="@dimen/thumb_height" />
+        android:width="@dimen/thumbHeight"
+        android:height="@dimen/thumbHeight" />
 
     <solid android:color="@color/colorAccent" />
 </shape>
