--- a/app/src/main/res/layout/activity_klaxon.xml
+++ b/app/src/main/res/layout/activity_klaxon.xml
@@ -1,24 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/klaxon_background"
-    android:id="@+id/root"
+    android:orientation="vertical"
     tools:context="com.cvv.fanstaticapps.randomticker.activities.KlaxonActivity">
 
-    <com.richpath.RichPathView
-        android:id="@+id/alarm_bell_icon"
+    <FrameLayout
+        android:id="@+id/waiting_icon"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="2"
-        android:gravity="center"
-        android:padding="@dimen/sectionMargin"
-        app:vector="@drawable/ic_alarm_bell"/>
+        android:padding="@dimen/sectionMargin">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_timer_outer_part" />
+
+        <ImageView
+            android:id="@+id/timer_hand"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_timer_hand" />
+    </FrameLayout>
 
     <pl.bclogic.pulsator4droid.library.PulsatorLayout
         android:id="@+id/pulsator"
@@ -50,7 +59,7 @@
             android:minHeight="@dimen/dismissButtonMinSize"
             android:minWidth="@dimen/dismissButtonMinSize"
             android:src="@drawable/ic_cancel"
-            android:tint="@color/dismissColor"/>
+            android:tint="@color/dismissColor" />
     </pl.bclogic.pulsator4droid.library.PulsatorLayout>
 
 </LinearLayout>
