--- a/app/src/main/res/layout-sw480dp/activity_main.xml
+++ b/app/src/main/res/layout-sw480dp/activity_main.xml
@@ -7,18 +7,8 @@
     android:background="@drawable/background_tile"
     tools:context="com.cvv.fanstaticapps.randomticker.activities.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+	<include layout="@layout/app_bar"/>
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
