--- a/app/src/main/res/layout/activity_klaxon.xml
+++ b/app/src/main/res/layout/activity_klaxon.xml
@@ -10,7 +10,7 @@
     tools:context="com.cvv.fanstaticapps.randomticker.activities.KlaxonActivity">
 
     <FrameLayout
-        android:id="@+id/waiting_icon"
+        android:id="@+id/waitingIcon"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -23,7 +23,7 @@
             android:src="@drawable/ic_timer_outer_part" />
 
         <ImageView
-            android:id="@+id/timer_hand"
+            android:id="@+id/timerHand"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/ic_timer_hand" />
@@ -48,7 +48,7 @@
         tools:layout_editor_absoluteX="16dp">
 
         <ImageView
-            android:id="@+id/dismiss_button"
+            android:id="@+id/dismissButton"
             style="@style/Base.TextAppearance.AppCompat.Widget.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
